kubernetes/apps/default/e2e-test/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: e2e-test
spec:
  selector:
    app.kubernetes.io/name: e2e-test
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
