kubernetes/apps/default/e2e-test/app/httproute-lan.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: e2e-test-lan
spec:
  hostnames:
    - test-lan.ringbell.cc
  parentRefs:
    - name: internal
      namespace: networking
  rules:
    - backendRefs:
        - name: e2e-test
          port: 80
