kubernetes/apps/default/e2e-test/app/httproute-tunnel.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: e2e-test-tunnel
spec:
  hostnames:
    - test-public.ringbell.cc
  parentRefs:
    - name: external
      namespace: networking
  rules:
    - backendRefs:
        - name: e2e-test
          port: 80
